testsuite/tests/interpreter_errors/invalid_property_access_nullable/test.out
main.adb
script:2:25: error: Invalid direct access on node of kind ConstantAbsent?
2 | objects[1].has_constant.get_attribute("attribute")
  |                         ^^^^^^^^^^^^^ 

